--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
          <p class="title">Software Engineer</p>
 
-         <p class="resume-download" >
-          <a style ="color: aliceblue; "
-          href="/assets/Harishita Gupta SJSU.pdf"
-          download="Harishita Gupta SJSU.pdf"
-          aria-label="Download resume (PDF)"
-        >
-          <span>Download Resume</span>
-        </a></p>
+         <p class="resume-download">
+          <a class="resume-link"
+            href="/assets/Harshita Gupta SJSU.pdf"
+            download="Harishita Gupta Resume.pdf"
+            aria-label="Download resume (PDF)">
+            <span>Download Resume</span>
+          </a>
+        </p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -224,7 +224,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Learning & Upskilling</h4>
+                <h4 class="h4 service-item-title">Learning &amp; Upskilling</h4>
 
                 <p class="service-item-text">
                   Exploring new frameworks and patterns, applying them in real projects.
@@ -272,10 +272,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Exploring Cafés & Culture</h4>
+                <h4 class="h4 service-item-title">Exploring Cafés &amp; Culture</h4>
 
                 <p class="service-item-text">
-                  Discovering new cafés, cuisines, and local cultures, because creativity brews best over good coffee.
+                  Discovering new cafes, cuisines, and local cultures, because creativity brews best over good coffee.
                 </p>
               </div>
 
@@ -526,7 +526,7 @@ Systems, Software System Engineering
                 Bachelor of Technology in Computer Science and Engineering
                 </p>
               <p class="timeline-text">
-                Coursework: Data Structures & Algorithms, DBMS, Operating Systems, Computer Architecture
+                Coursework: Data Structures &amp; Algorithms, DBMS, Operating Systems, Computer Architecture
               </p>
 
             </li>
@@ -558,7 +558,7 @@ Systems, Software System Engineering
               <p class="timeline-text">
                 Developed REST microservices for T-Mobile’s DigitalONE, boosting data flow by 40% during migration.
               </p>
-              <p class="timeline-text">Implemented complex JSON parsing, improving reliability & resolution speed in critical workflows.
+              <p class="timeline-text">Implemented complex JSON parsing, improving reliability &amp; resolution speed in critical workflows.
               </p>
               <p class="timeline-text">Delivered features in Agile sprints, applying unit/integration testing and secure API design principles.</p>
 
@@ -579,7 +579,7 @@ Systems, Software System Engineering
               </p>
               <p class="timeline-text">Improved code quality by implementing a Mockito testing suite, increasing test coverage by over 20%.
               </p>
-              <p class="timeline-text">Enhanced operator efficiency with AngularJS UI for incident categorization & prioritization.</p>
+              <p class="timeline-text">Enhanced operator efficiency with AngularJS UI for incident categorization &amp; prioritization.</p>
 
               <p style="color: #056C3E; padding-top: 5px;">
                 Software Engineer</p>
@@ -615,7 +615,7 @@ Systems, Software System Engineering
             </li>
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title"><eClinicalWorks, India</h4>
+              <h4 class="h4 timeline-item-title">eClinicalWorks, India</h4>
 
               <p style="color: #056C3E; padding-top: 5px;">
                 Software Specialis</p>
@@ -623,7 +623,7 @@ Systems, Software System Engineering
               <span>September 2017 – February 2019</span>
 
               <p class="timeline-text">
-                Maintained EHR system, troubleshot using Tomcat & SQL tools, and increased overall system reliability.  
+                Maintained EHR system, troubleshot using Tomcat &amp; SQL tools, and increased overall system reliability.  
               </p>
 
             </li>
@@ -692,7 +692,7 @@ Systems, Software System Engineering
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Data Structures & Algorithms</h5>
+                <h5 class="h5">Data Structures &amp; Algorithms</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -705,7 +705,7 @@ Systems, Software System Engineering
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Agile & SDLC</h5>
+                <h5 class="h5">Agile &amp; SDLC</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -718,7 +718,7 @@ Systems, Software System Engineering
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">CI/CD & DevOps</h5>
+                <h5 class="h5">CI/CD &amp; DevOps</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -731,7 +731,7 @@ Systems, Software System Engineering
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">UI Engineering & Design</h5>
+                <h5 class="h5">UI Engineering &amp; Design</h5>
                 <data value="60">60%</data>
               </div>
 
@@ -971,7 +971,7 @@ Systems, Software System Engineering
             <li class="pill">Cloud Computing</li>
             <li class="pill">CI/CD</li>
             <li class="pill">Agile/Scrum</li>
-            <li class="pill">Authentication & Authorization</li>
+            <li class="pill">Authentication &amp; Authorization</li>
             <li class="pill">System design</li>
             <li class="pill">Object-oriented programming</li>
             <li class="pill">Multithreding</li>
