Fix resume href to actual filename

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
          <p class="resume-download">
           <a class="resume-link"
-            href="/assets/Harshita Gupta SJSU.pdf"
+            href="./assets/Harishita%20Gupta%20Resume.pdf"
             download="Harishita Gupta Resume.pdf"
             aria-label="Download resume (PDF)">
             <span>Download Resume</span>
