--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
          <p class="resume-download">
           <a class="resume-link"
-            href="./assets/HarishitaGuptaResume.pdf"
-            download="HarishitaGuptaResume.pdf"
+            href="./assets/Harishita-Gupta-Resume.pdf"
+            download="Harishita-Gupta-Resume.pdf"
             aria-label="Download resume (PDF)">
             <span>Download Resume</span>
           </a>
