--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+1 (669) 348-8834</a>
+              <a href="tel:+16693488834" class="contact-link">+1 (669) 348-8834</a>
             </div>
 
           </li>
@@ -1198,7 +1198,11 @@ Systems, Software System Engineering
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="https://formsubmit.co/harshita.gupta1502@gmail.com" method="POST" class="form" data-form>
+
+            <!-- Formsubmit: no-signup POST target. On first submit you'll receive a verification email to activate forwarding. -->
+            <input type="hidden" name="_subject" value="New message from portfolio" />
+            <input type="hidden" name="_captcha" value="false" />
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
