--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <h4 class="h4 service-item-title">Learning &amp; Upskilling</h4>
 
                 <p class="service-item-text">
-                  Exploring new frameworks and patterns, applying them in real projects.
+                  Exploring new frameworks and patterns, applying them in real projects. Leverage AI tools to speed up learning and development.
                 </p>
               </div>
 
@@ -901,11 +901,15 @@ Systems, Software System Engineering
           </div>
           <ul class="pill-list" aria-label="Frameworks and Technologies">
             <li class="pill">REST APIs</li>
+            <li class="pill">AI</li>
+            <li class="pill">LLM</li>
+            <li class="pill">RAG</li>
             <li class="pill">Spring Boot</li>
             <li class="pill">Spring MVC</li>
             <li class="pill">Microservices</li>
             <li class="pill">FastAPI</li>
             <li class="pill">Django</li>
+            <li class="pill">RabbitMQ</li>
             <li class="pill">OpenMP</li>
             <li class="pill">MPI</li>
             <li class="pill">J2EE</li>
@@ -953,6 +957,9 @@ Systems, Software System Engineering
             <li class="pill">WinSCP</li>
             <li class="pill">SVN</li>
             <li class="pill">VS Code</li>
+            <li class="pill">Github Co-pilot</li>
+            <li class="pill">Cursor</li>
+            <li class="pill">ChatGPT</li>
             <li class="pill">Eclipse</li>
             <li class="pill">IntelliJ IDEA</li>
             <li class="pill">Apache Tomcat</li>
@@ -963,7 +970,7 @@ Systems, Software System Engineering
      
           <div class="skill-card__title">
             <span class="icon-box"><ion-icon name="school-outline"></ion-icon></span>
-            <h4 class="h4">Technologis</h4>
+            <h4 class="h4">Engineering Practices</h4>
           </div>
           <ul class="pill-list" aria-label="Engineering Practices">
             <li class="pill">Distributed Systems</li>
