Fix resume PDF filename reference

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
          <p class="resume-download">
           <a class="resume-link"
-            href="./assets/resume - Harishita.pdf"
-            download="resume - Harishita.pdf"
+            href="./assets/Resume - Harishita.pdf"
+            download="Resume - Harishita.pdf"
             aria-label="Download resume (PDF)">
             <span>Download Resume</span>
           </a>
